# chat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE.md  README.md  TODO.md  convo-history-feature.md  package-lock.json  package.json
.cursor/rules/: style.mdc
frontend/: .electronrc  cert.cfg  electron.tsconfig.json  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  performance-test.js  style.md  tsconfig.app.json  vite.config.ts
frontend/.cursor/rules/: style.mdc  tests.mdc
frontend/dist-electron/: main.cjs  main.js  preload.js
frontend/docs/: style.md
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
frontend/src-tauri/src/: credentials.rs  lib.rs  shortcuts.rs
frontend/src/components/: CommandPalette.tsx  DevControls.tsx  Layout.tsx  ModelSelector.tsx  ResizableSplitter.tsx  Settings.tsx  app-sidebar.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/data/: mockChat.ts
frontend/src/hooks/: useAutoScroll.ts  useChatLogic.ts  useChatScroll.ts  useCodeBlockManager.ts  useSmoothScroll.ts  useTitleBarMode.ts
frontend/src/lib/: apiKeyStorage.ts  gemini.ts  historyService.ts  llmService.ts  localStorageApiKeyStorage.ts  markdown.test.ts  markdown.tsx  models.ts  openrouter.ts  tauriApiKeyStorage.ts
frontend/src/pages/: ChatInterface.tsx  ComponentShowcase.tsx  Settings.tsx  StreamTest.tsx
frontend/src/test/: setup.ts
src/: App.tsx  index.css
src/components/: app-sidebar.tsx
(+30 files in other folders)
